--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -159,5 +159,6 @@
   "rust-analyzer.linkedProjects": [
     "noir/noir-repo/Cargo.toml",
     "avm-transpiler/Cargo.toml"
-  ] 
+  ],
+  "noir.nargoPath": "${workspaceFolder}/noir/noir-repo/target/bin/release/nargo"
 }
