--- a/yarn-project/p2p-discV5/package.json
+++ b/yarn-project/p2p-discV5/package.json
@@ -55,5 +55,9 @@
     "@multiformats/multiaddr": "^12.1.14",
     "dgram": "^1.0.1",
     "libp2p": "^1.2.4"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.2"
   }
 }
