--- a/barretenberg/cpp/src/barretenberg/benchmark/stdlib_hash/CMakeLists.txt
+++ b/barretenberg/cpp/src/barretenberg/benchmark/stdlib_hash/CMakeLists.txt
@@ -5,5 +5,7 @@ barretenberg_module(
     stdlib_sha256
     stdlib_blake3s
     stdlib_pedersen_hash
+    stdlib_keccak
     plonk
+    ultra_honk
 )
