--- a/yarn-project/p2p-discV5/package.json
+++ b/yarn-project/p2p-discV5/package.json
@@ -44,16 +44,19 @@
   "dependencies": {
     "@chainsafe/discv5": "^9.0.0",
     "@chainsafe/enr": "^3.0.0",
+    "@chainsafe/libp2p-noise": "^15.0.0",
     "@chainsafe/libp2p-yamux": "^6.0.2",
     "@libp2p/bootstrap": "^10.0.16",
     "@libp2p/crypto": "^4.0.3",
     "@libp2p/identify": "^1.0.15",
     "@libp2p/interface": "^1.1.4",
     "@libp2p/mplex": "^10.0.16",
+    "@libp2p/peer-id": "^4.0.7",
     "@libp2p/peer-id-factory": "^4.0.7",
     "@libp2p/tcp": "^9.0.16",
     "@multiformats/multiaddr": "^12.1.14",
     "dgram": "^1.0.1",
+    "it-pipe": "^3.0.1",
     "libp2p": "^1.2.4"
   },
   "devDependencies": {
