--- a/yarn-project/p2p-discV5/package.json
+++ b/yarn-project/p2p-discV5/package.json
@@ -42,6 +42,7 @@
     "node": ">=18"
   },
   "dependencies": {
+    "@aztec/kv-store": "workspace:^",
     "@chainsafe/discv5": "^9.0.0",
     "@chainsafe/enr": "^3.0.0",
     "@chainsafe/libp2p-noise": "^15.0.0",
