--- a/yarn-project/p2p-discV5/package.json
+++ b/yarn-project/p2p-discV5/package.json
@@ -42,7 +42,7 @@
     "node": ">=18"
   },
   "dependencies": {
-    "@aztec/kv-store": "workspace:^",
+    "@aztec/kv-store": "0.32.0",
     "@chainsafe/discv5": "^9.0.0",
     "@chainsafe/enr": "^3.0.0",
     "@chainsafe/libp2p-noise": "^15.0.0",
@@ -51,6 +51,7 @@
     "@libp2p/crypto": "^4.0.3",
     "@libp2p/identify": "^1.0.15",
     "@libp2p/interface": "^1.1.4",
+    "@libp2p/interface-libp2p": "^3.2.0",
     "@libp2p/mplex": "^10.0.16",
     "@libp2p/peer-id": "^4.0.7",
     "@libp2p/peer-id-factory": "^4.0.7",
