--- a/yarn-project/p2p-discV5/tsconfig.json
+++ b/yarn-project/p2p-discV5/tsconfig.json
@@ -1,9 +1,27 @@
 {
-  "extends": "..",
   "compilerOptions": {
     "outDir": "dest",
     "rootDir": "src",
-    "tsBuildInfoFile": ".tsbuildinfo"
+    "tsBuildInfoFile": ".tsbuildinfo",
+    "target": "es2020",
+    "lib": [
+      "dom",
+      "esnext",
+      "es2017.object"
+    ],
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "strict": true,
+    "declaration": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "downlevelIteration": true,
+    "inlineSourceMap": true,
+    "declarationMap": true,
+    "importHelpers": true,
+    "resolveJsonModule": true,
+    "composite": true,
+    "skipLibCheck": true
   },
   "references": [],
   "include": [
