Try public simulator integration

--- a/yarn-project/simulator/package.json
+++ b/yarn-project/simulator/package.json
@@ -51,6 +51,7 @@
     "tslib": "^2.4.0"
   },
   "devDependencies": {
+    "@aztec/archiver": "workspace:^",
     "@aztec/kv-store": "workspace:^",
     "@aztec/merkle-tree": "workspace:^",
     "@aztec/noir-contracts.js": "workspace:^",
