--- a/yarn-project/simulator/tsconfig.json
+++ b/yarn-project/simulator/tsconfig.json
@@ -28,6 +28,9 @@
       "path": "../world-state"
     },
     {
+      "path": "../archiver"
+    },
+    {
       "path": "../kv-store"
     },
     {
