--- a/barretenberg/cpp/src/barretenberg/benchmark/CMakeLists.txt
+++ b/barretenberg/cpp/src/barretenberg/benchmark/CMakeLists.txt
@@ -4,6 +4,7 @@ add_subdirectory(goblin_bench)
 add_subdirectory(ipa_bench)
 add_subdirectory(client_ivc_bench)
 add_subdirectory(pippenger_bench)
+add_subdirectory(raw_ivc_bench)
 add_subdirectory(plonk_bench)
 add_subdirectory(protogalaxy_bench)
 add_subdirectory(protogalaxy_rounds_bench)
