--- a/yarn-project/p2p/package.json
+++ b/yarn-project/p2p/package.json
@@ -18,7 +18,10 @@
     "formatting:fix": "run -T eslint --fix ./src && run -T prettier -w ./src",
     "test": "NODE_NO_WARNINGS=1 node --experimental-vm-modules ../node_modules/.bin/jest --passWithNoTests",
     "start:test_app:debug": "node --inspect-brk=0.0.0.0 ./dest/test_app.js",
-    "start:test_app": "node ./dest/test_app.js",
+    "start:test_app": "node ./dest/test_apps/test_app.js",
+    "start:e2e_txs": "node ./dest/test_apps/e2e_txs_script.js",
+    "start:simple": "node ./dest/test_apps/simple.js",
+    "start:bootstrap": "node ./dest/test_apps/bootnode.js",
     "start": "node ./dest",
     "start:dev": "tsc-watch -p tsconfig.json --onSuccess 'yarn start'"
   },
@@ -49,6 +52,7 @@
     ]
   },
   "dependencies": {
+    "@aztec/aztec.js": "workspace:^",
     "@aztec/circuit-types": "workspace:^",
     "@aztec/circuits.js": "workspace:^",
     "@aztec/foundation": "workspace:^",
