--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,11 +14,22 @@ concurrency:
   group: ci-${{ github.ref_name == 'master' && github.run_id || github.ref_name }}
   cancel-in-progress: true
 
+env:
+  DOCKERHUB_PASSWORD: "${{ secrets.DOCKERHUB_PASSWORD }}"
+  RUN_ID: ${{ github.run_id }}
+  RUN_ATTEMPT: ${{ github.run_attempt }}
+  USERNAME: ${{ inputs.username || github.actor }}
+  GITHUB_TOKEN: ${{ github.token }}
+  GH_SELF_HOSTED_RUNNER_TOKEN: ${{ secrets.GH_SELF_HOSTED_RUNNER_TOKEN }}
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  BUILD_INSTANCE_SSH_KEY: ${{ secrets.BUILD_INSTANCE_SSH_KEY }}
+
 jobs:
   setup:
     uses: ./.github/workflows/setup-runner.yml
     with:
-      runner_label: ${{ inputs.username || github.actor }}-x86
+      username: ${{ inputs.username || github.actor }}
       runner_type: builder-x86
     secrets: inherit
 
@@ -29,13 +40,10 @@ jobs:
       e2e_list: ${{ steps.e2e_list.outputs.list }}
       bench_list: ${{ steps.bench_list.outputs.list }}
     steps:
-      - {
-          uses: actions/checkout@v4,
-          with: { ref: "${{ github.event.pull_request.head.sha }}" },
-        }
+      - uses: actions/checkout@v4
+        with: { ref: "${{ github.event.pull_request.head.sha }}" }
       - uses: ./.github/ci-setup-action
         with:
-          dockerhub_password: "${{ secrets.DOCKERHUB_PASSWORD }}"
           concurrency_key: build-${{ inputs.username || github.actor }}-x86
       # prepare images locally, tagged by commit hash
       - name: "Build E2E Image"
@@ -62,24 +70,10 @@ jobs:
       - uses: actions/checkout@v4
         with: { ref: "${{ github.event.pull_request.head.sha }}" }
       - uses: ./.github/ci-setup-action
-        with:
-          dockerhub_password: "${{ secrets.DOCKERHUB_PASSWORD }}"
-          # we want to get the builder's details as SPOT_IP and SPOT_KEY, and ensure it's up
-          start_builder: true
-
       - name: Ensure Builder has Images
         uses: ./.github/ensure-builder
         with:
-          # TODO write and read these from github state
-          run_id: ${{ github.run_id }}
-          run_attempt: ${{ github.run_attempt }}
-          runner_label: ${{ inputs.username || github.actor }}-x86
           runner_type: builder-x86
-          concurrency_github_token: "${{ secrets.AZTEC_GITHUB_TOKEN }}"
-          github_token: ${{ secrets.GH_SELF_HOSTED_RUNNER_TOKEN }}
-          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          ec2_key: ${{ secrets.BUILD_INSTANCE_SSH_KEY }}
           run: |
             # in case of inconvenient prune, re-export
             set -eux
@@ -93,11 +87,7 @@ jobs:
       - name: Copy Docker Images to Tester
         uses: ./.github/ensure-builder
         with:
-          run_id: ${{ github.run_id }}
           runner_type: ${{ matrix.test == 'client-prover-integration' && '16core-tester-x86' || '4core-tester-x86' }}
-          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          ec2_key: ${{ secrets.BUILD_INSTANCE_SSH_KEY }}
           run: |
             set -eux
             export BUILDER_SPOT_IP=${{ env.BUILDER_SPOT_IP }}
@@ -133,25 +123,12 @@ jobs:
       - uses: actions/checkout@v4
         with: { ref: "${{ github.event.pull_request.head.sha }}" }
       - uses: ./.github/ci-setup-action
-        with:
-          dockerhub_password: "${{ secrets.DOCKERHUB_PASSWORD }}"
-          # we want to get the builder's details as SPOT_IP and SPOT_KEY, and ensure it's up
-          start_builder: true
-
       - name: Ensure Builder has Images
         # needed to use run-on-builder
         uses: ./.github/ensure-builder
         with:
           # TODO write and read these from github state
-          run_id: ${{ github.run_id }}
-          run_attempt: ${{ github.run_attempt }}
-          runner_label: ${{ inputs.username || github.actor }}-x86
           runner_type: builder-x86
-          concurrency_github_token: "${{ secrets.AZTEC_GITHUB_TOKEN }}"
-          github_token: ${{ secrets.GH_SELF_HOSTED_RUNNER_TOKEN }}
-          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          ec2_key: ${{ secrets.BUILD_INSTANCE_SSH_KEY }}
           run: |
             # in case of inconvenient prune, re-export
             set -eux
@@ -166,11 +143,7 @@ jobs:
         # needed to use run-on-tester
         uses: ./.github/ensure-builder
         with:
-          run_id: ${{ github.run_id }}
           runner_type: 16core-tester-x86
-          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          ec2_key: ${{ secrets.BUILD_INSTANCE_SSH_KEY }}
           run: |
             set -eux
             export BUILDER_SPOT_IP=${{ env.BUILDER_SPOT_IP }}
@@ -203,7 +176,6 @@ jobs:
   # #         ref: "${{ github.event.pull_request.head.sha }}"
   # #     - uses: ./.github/ci-setup-action
   # #       with:
-  # #         dockerhub_password: "${{ secrets.DOCKERHUB_PASSWORD }}"
   # #         concurrency_key: build-${{ inputs.username || github.actor }}-x86
   # #     - name: "Build and upload bench aggregate file"
   # #       working-directory: ./yarn-project/scripts
@@ -225,13 +197,10 @@ jobs:
     needs: setup
     runs-on: ${{ inputs.username || github.actor }}-x86
     steps:
-      - {
-          uses: actions/checkout@v4,
-          with: { ref: "${{ github.event.pull_request.head.sha }}" },
-        }
+      - uses: actions/checkout@v4
+        with: { ref: "${{ github.event.pull_request.head.sha }}" }
       - uses: ./.github/ci-setup-action
         with:
-          dockerhub_password: "${{ secrets.DOCKERHUB_PASSWORD }}"
           concurrency_key: noir-format-${{ inputs.username || github.actor }}-x86
       - name: "Format Noir"
         working-directory: ./noir/
@@ -248,14 +217,11 @@ jobs:
     needs: setup
     runs-on: ${{ inputs.username || github.actor }}-x86
     steps:
-      - {
-          uses: actions/checkout@v4,
-          with: { ref: "${{ github.event.pull_request.head.sha }}" },
-        }
+      - uses: actions/checkout@v4
+        with: { ref: "${{ github.event.pull_request.head.sha }}" }
       # Only allow one memory-hunger prover test to use this runner
       - uses: ./.github/ci-setup-action
         with:
-          dockerhub_password: "${{ secrets.DOCKERHUB_PASSWORD }}"
           # must be globally unique for build x runner
           concurrency_key: bb-native-tests-${{ inputs.username || github.actor }}-x86
       - name: "Native Prover Tests"
@@ -268,13 +234,10 @@ jobs:
     needs: setup
     runs-on: ${{ github.actor }}-x86
     steps:
-      - {
-          uses: actions/checkout@v4,
-          with: { ref: "${{ github.event.pull_request.head.sha }}" },
-        }
+      - uses: actions/checkout@v4
+        with: { ref: "${{ github.event.pull_request.head.sha }}" }
       - uses: ./.github/ci-setup-action
         with:
-          dockerhub_password: "${{ secrets.DOCKERHUB_PASSWORD }}"
           concurrency_key: bb-js-test-${{ github.actor }}-x86
       - name: "bb.js Tests"
         working-directory: ./barretenberg/ts/
@@ -285,13 +248,10 @@ jobs:
     needs: setup
     runs-on: ${{ inputs.username || github.actor }}-x86
     steps:
-      - {
-          uses: actions/checkout@v4,
-          with: { ref: "${{ github.event.pull_request.head.sha }}" },
-        }
+      - uses: actions/checkout@v4
+        with: { ref: "${{ github.event.pull_request.head.sha }}" }
       - uses: ./.github/ci-setup-action
         with:
-          dockerhub_password: "${{ secrets.DOCKERHUB_PASSWORD }}"
           concurrency_key: noir-${{ inputs.username || github.actor }}-x86
       - name: "Test Noir JS packages"
         run: earthly-ci --no-output ./noir+test
@@ -300,13 +260,10 @@ jobs:
     needs: setup
     runs-on: ${{ inputs.username || github.actor }}-x86
     steps:
-      - {
-          uses: actions/checkout@v4,
-          with: { ref: "${{ github.event.pull_request.head.sha }}" },
-        }
+      - uses: actions/checkout@v4
+        with: { ref: "${{ github.event.pull_request.head.sha }}" }
       - uses: ./.github/ci-setup-action
         with:
-          dockerhub_password: "${{ secrets.DOCKERHUB_PASSWORD }}"
           concurrency_key: noir-packages-${{ inputs.username || github.actor }}-x86
       - name: "Test Noir JS packages"
         run: earthly-ci --no-output ./noir+packages-test
@@ -315,13 +272,10 @@ jobs:
     needs: setup
     runs-on: ${{ inputs.username || github.actor }}-x86
     steps:
-      - {
-          uses: actions/checkout@v4,
-          with: { ref: "${{ github.event.pull_request.head.sha }}" },
-        }
+      - uses: actions/checkout@v4
+        with: { ref: "${{ github.event.pull_request.head.sha }}" }
       - uses: ./.github/ci-setup-action
         with:
-          dockerhub_password: "${{ secrets.DOCKERHUB_PASSWORD }}"
           concurrency_key: noir-projects-${{ inputs.username || github.actor }}-x86
       - name: "Noir Projects"
         timeout-minutes: 25
@@ -331,14 +285,11 @@ jobs:
     needs: noir-projects
     runs-on: ${{ github.actor }}-x86
     steps:
-      - {
-          uses: actions/checkout@v4,
-          with: { ref: "${{ github.event.pull_request.head.sha }}" },
-        }
+      - uses: actions/checkout@v4
+        with: { ref: "${{ github.event.pull_request.head.sha }}" }
       # Only allow one memory-hunger prover test to use this runner
       - uses: ./.github/ci-setup-action
         with:
-          dockerhub_password: "${{ secrets.DOCKERHUB_PASSWORD }}"
           concurrency_key: yarn-project-formatting-${{ github.actor }}-x86
       - name: "Yarn Project Tests"
         timeout-minutes: 25
@@ -348,14 +299,11 @@ jobs:
     needs: noir-projects
     runs-on: ${{ github.actor }}-x86
     steps:
-      - {
-          uses: actions/checkout@v4,
-          with: { ref: "${{ github.event.pull_request.head.sha }}" },
-        }
+      - uses: actions/checkout@v4
+        with: { ref: "${{ github.event.pull_request.head.sha }}" }
       # Only allow one memory-hunger prover test to use this runner
       - uses: ./.github/ci-setup-action
         with:
-          dockerhub_password: "${{ secrets.DOCKERHUB_PASSWORD }}"
           concurrency_key: yarn-project-test-${{ github.actor }}-x86
       - name: "Yarn Project Tests"
         timeout-minutes: 30
@@ -365,13 +313,10 @@ jobs:
     needs: noir-projects
     runs-on: ${{ github.actor }}-x86
     steps:
-      - {
-          uses: actions/checkout@v4,
-          with: { ref: "${{ github.event.pull_request.head.sha }}" },
-        }
+      - uses: actions/checkout@v4
+        with: { ref: "${{ github.event.pull_request.head.sha }}" }
       - uses: ./.github/ci-setup-action
         with:
-          dockerhub_password: "${{ secrets.DOCKERHUB_PASSWORD }}"
           concurrency_key: prover-client-test-${{ github.actor }}-x86
       - name: "Prover Client Tests"
         timeout-minutes: 25
@@ -381,13 +326,10 @@ jobs:
     needs: build
     runs-on: ${{ github.actor }}-x86
     steps:
-      - {
-          uses: actions/checkout@v4,
-          with: { ref: "${{ github.event.pull_request.head.sha }}" },
-        }
+      - uses: actions/checkout@v4
+        with: { ref: "${{ github.event.pull_request.head.sha }}" }
       - uses: ./.github/ci-setup-action
         with:
-          dockerhub_password: "${{ secrets.DOCKERHUB_PASSWORD }}"
           concurrency_key: build-acir-tests-${{ github.actor }}-x86
       - name: "Build Acir Tests"
         timeout-minutes: 25
@@ -397,13 +339,10 @@ jobs:
     needs: build-acir-tests
     runs-on: ${{ github.actor }}-x86
     steps:
-      - {
-          uses: actions/checkout@v4,
-          with: { ref: "${{ github.event.pull_request.head.sha }}" },
-        }
+      - uses: actions/checkout@v4
+        with: { ref: "${{ github.event.pull_request.head.sha }}" }
       - uses: ./.github/ci-setup-action
         with:
-          dockerhub_password: "${{ secrets.DOCKERHUB_PASSWORD }}"
           concurrency_key: barretenberg-acir-tests-bb-${{ github.actor }}-x86
       - name: "BB Native Acir Tests"
         working-directory: ./noir/
@@ -414,13 +353,10 @@ jobs:
     needs: build-acir-tests
     runs-on: ${{ github.actor }}-x86
     steps:
-      - {
-          uses: actions/checkout@v4,
-          with: { ref: "${{ github.event.pull_request.head.sha }}" },
-        }
+      - uses: actions/checkout@v4
+        with: { ref: "${{ github.event.pull_request.head.sha }}" }
       - uses: ./.github/ci-setup-action
         with:
-          dockerhub_password: "${{ secrets.DOCKERHUB_PASSWORD }}"
           concurrency_key: barretenberg-acir-tests-sol-${{ github.actor }}-x86
       - name: "BB Solidity Acir Tests"
         working-directory: ./noir/
@@ -431,13 +367,10 @@ jobs:
     needs: build-acir-tests
     runs-on: ${{ github.actor }}-x86
     steps:
-      - {
-          uses: actions/checkout@v4,
-          with: { ref: "${{ github.event.pull_request.head.sha }}" },
-        }
+      - uses: actions/checkout@v4
+        with: { ref: "${{ github.event.pull_request.head.sha }}" }
       - uses: ./.github/ci-setup-action
         with:
-          dockerhub_password: "${{ secrets.DOCKERHUB_PASSWORD }}"
           concurrency_key: barretenberg-acir-tests-bb-js-${{ github.actor }}-x86
       - name: "BB JS Acir Tests"
         working-directory: ./noir/
@@ -449,13 +382,10 @@ jobs:
     runs-on: ${{ inputs.username || github.actor }}-x86
     if: github.event.number
     steps:
-      - {
-          uses: actions/checkout@v4,
-          with: { ref: "${{ github.event.pull_request.head.sha }}" },
-        }
+      - uses: actions/checkout@v4
+        with: { ref: "${{ github.event.pull_request.head.sha }}" }
       - uses: ./.github/ci-setup-action
         with:
-          dockerhub_password: "${{ secrets.DOCKERHUB_PASSWORD }}"
           concurrency_key: docs-preview-${{ inputs.username || github.actor }}-x86
       - name: "Docs Preview"
         timeout-minutes: 30
@@ -469,21 +399,10 @@ jobs:
       - uses: actions/checkout@v4
         with: { ref: "${{ github.event.pull_request.head.sha }}" }
       - uses: ./.github/ci-setup-action
-        with:
-          dockerhub_password: "${{ secrets.DOCKERHUB_PASSWORD }}"
-          # we want to get the builder's details as SPOT_IP and SPOT_KEY, and ensure it's up
-          start_builder: true
       - name: Build Bench Binaries
         uses: ./.github/ensure-builder
         with:
-          run_id: ${{ github.run_id }}
-          run_attempt: ${{ github.run_attempt }}
-          runner_label: ${{ inputs.username || github.actor }}-x86
           runner_type: builder-x86
-          github_token: ${{ secrets.GH_SELF_HOSTED_RUNNER_TOKEN }}
-          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          ec2_key: ${{ secrets.BUILD_INSTANCE_SSH_KEY }}
           run: |
             set -eux
             echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u aztecprotocolci --password-stdin
@@ -491,11 +410,7 @@ jobs:
       - name: Run Bench
         uses: ./.github/ensure-builder
         with:
-          run_id: ${{ github.run_id }}
           runner_type: 16core-tester-x86
-          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          ec2_key: ${{ secrets.BUILD_INSTANCE_SSH_KEY }}
           run: |
             scripts/earthly-ci --no-output ./barretenberg/cpp/+bench-client-ivc --bench_mode=cache
             scripts/earthly-ci --no-output ./barretenberg/cpp/+bench-ultra-honk --bench_mode=cache
@@ -506,14 +421,11 @@ jobs:
     permissions:
       pull-requests: write
     steps:
-      - {
-          uses: actions/checkout@v4,
-          with: { ref: "${{ github.event.pull_request.head.sha }}" },
-        }
+      - uses: actions/checkout@v4
+        with: { ref: "${{ github.event.pull_request.head.sha }}" }
       # Only allow one memory-hunger prover test to use this runner
       - uses: ./.github/ci-setup-action
         with:
-          dockerhub_password: "${{ secrets.DOCKERHUB_PASSWORD }}"
           concurrency_key: protocol-circuits-gates-report-${{ inputs.username || github.actor }}-x86
       - name: "Noir Protocol Circuits Report"
         working-directory: ./noir-projects/
