--- a/.github/ensure-builder/action.yml
+++ b/.github/ensure-builder/action.yml
@@ -22,7 +22,7 @@ runs:
         TYPE=${{ inputs.runner_type }}
         # Try to use spot for every runner type for now
         echo "spot_strategy=BestEffort" >> $GITHUB_OUTPUT
-        echo "runner_label=$runner_type" >> $GITHUB_OUTPUT
+        echo "runner_label=$USERNAME-$runner_type" >> $GITHUB_OUTPUT
         if [[ $TYPE == builder-x86 ]]; then
           # 128-core x86 instance types with least evictions
           echo "instance_type=r6in.32xlarge r6a.32xlarge i4i.32xlarge r7iz.32xlarge" >> $GITHUB_OUTPUT
