--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,8 +92,8 @@ jobs:
             set -eux
             export BUILDER_SPOT_IP=${{ env.BUILDER_SPOT_IP }}
             export BUILDER_SPOT_KEY=~/.ssh/build_instance_key
+            SHA=${{ github.event.pull_request.head.sha }}
             scripts/run_on_builder "
-              export SHA=${{ github.event.pull_request.head.sha }}
               SCRIPT="! [ -f $SHA.brotli ] && docker save aztecprotocol/aztec:$SHA aztecprotocol/end-to-end:$SHA | brotli -2 > $SHA.brotli"
               flock $SHA.lock bash -c "$SCRIPT"
               cat $SHA.brotli
@@ -146,8 +146,8 @@ jobs:
             set -eux
             export BUILDER_SPOT_IP=${{ env.BUILDER_SPOT_IP }}
             export BUILDER_SPOT_KEY=~/.ssh/build_instance_key
+            SHA=${{ github.event.pull_request.head.sha }}
             scripts/run_on_builder "
-              export SHA=${{ github.event.pull_request.head.sha }}
               SCRIPT="! [ -f $SHA.brotli ] && docker save aztecprotocol/aztec:$SHA aztecprotocol/end-to-end:$SHA | brotli -2 > $SHA.brotli"
               flock $SHA.lock bash -c "$SCRIPT"
               cat $SHA.brotli
