--- a/.github/ensure-builder/action.yml
+++ b/.github/ensure-builder/action.yml
@@ -98,6 +98,7 @@ runs:
       shell: bash
       if: ${{ !contains(inputs.runner_type, 'tester') }}
       run: |
+        shutdown -P ${{ steps.select_instance.outputs.ttl }}
         set -x
         # detect run folder
         if ! scripts/run_on_builder "[ -d ~/run-$RUN_ID ]" ; then
@@ -161,8 +162,8 @@ runs:
             # Get the used space on /dev/nvme1n1 in bytes
             used_space=$(df /var/lib/docker | awk 'NR==2 {print $3}')
             # Compare and conditionally prune
-            if [[ "$used_space" -gt 128000000 ]] ; then
-              echo "Used space is greater than 128GB. Running 'docker system prune'."
+            if [[ "$used_space" -gt 196000000 ]] ; then
+              echo "Used space is greater than 196GB. Running 'docker system prune'."
               docker system prune -f -a || true
               echo "Pruned docker images."
             else
