chore(ci): run e2e on isolated spots (#6287)
- ability to call into builder from a non-builder runner, will
eventually move away from self-hosted runners as they had sharp edges
- run e2e on isolated spot for better reproducibility, rerun failed
works with e2e seamlessly
- move bench to new spot pattern that will eventually run other
periphery tests
- allow runners now run on `ubuntu` to align with calling into builder
(otherwise cache wouldn't be shared)
- many passes on CI to make patterns for the new paradigm of
coordinating builders and spot

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -267,15 +267,15 @@ jobs:
           aztec_manifest_key: l1-contracts
 
   noir-projects:
-    machine:
-      image: default
-    resource_class: large
+    docker:
+      - image: aztecprotocol/alpine-build-image
+    resource_class: small
     steps:
       - *checkout
       - *setup_env
       - run:
           name: "Build and test"
-          command: build noir-projects
+          command: cond_spot_run_build noir-projects 32
           aztec_manifest_key: noir-projects
 
   yarn-project-pre-join:
