--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -10,14 +10,8 @@ jobs:
   setup:
     uses: ./.github/workflows/setup-runner.yml
     with:
-      runner_label: master
-      ebs_cache_size_gb: 256
-      runner_concurrency: 20
-      subaction: ${{ inputs.runner_action || 'start' }}
-      ec2_instance_type: i4i.32xlarge m6a.32xlarge m6i.32xlarge m6id.32xlarge m6idn.32xlarge m6in.32xlarge m7a.32xlarge r6a.32xlarge r6i.32xlarge r6id.32xlarge
-      ec2_ami_id: ami-04d8422a9ba4de80f
-      ec2_spot_instance_strategy: BestEffort
-      ec2_instance_ttl: 40 # refreshed by jobs
+      username: master
+      runner_type: builder-x86
     secrets: inherit
 
   publish:
